Date format and general tidy up

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Finance manager homepage</title>
+<title>Finance Tracker edit user</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
@@ -10,7 +10,7 @@
 <body>
 
 	<div class="jumbotron text-center">
-		<h1>Finance Tracker</h1>
+		<h1>Finance Tracker edit users details</h1>
 		<p>Keep track of your finances</p> 
 		<p><a href="/profile">Back to my profile</a></p>
 	</div>
