--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,12 +4,13 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
+	<title>Finance Tracker Dashboard</title>
 </head>
 
 <body>
 
 	<div class="jumbotron text-center">
-		<h2>Finance Tracker Dashboard</h2>
+		<h1>Finance Tracker Dashboard</h1>
 		<h3>Welcome <%= user.fullname %></h3><%= user.email %> <a href="/logout"> logout</a> 
 	</div>
 
