--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Sign up</title>
+	<title>Finance Tracker sign up</title>
 
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 
 <body>
 	<div class="jumbotron text-center">
-		<h2><span>Sign up</span></h2>
+		<h1><span>Sign up</span></h1>
 	</div>
 
 	<span><%= msgError %></span>
