--- a/views/increase.ejs
+++ b/views/increase.ejs
@@ -19,10 +19,11 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<h3>Increase balance</h3>
-				<p>Please input how much money you would like to add to the budget.</p>
+				
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-6">
+						<p>Add to your balance here</p>
 						<form action="/increaseBal" method="post">
 						<input type="hidden" name="_id" value="<%= user._id %>">
 								<div class="row form-group input_group">
@@ -32,7 +33,7 @@
 								</div>
 								<div class="row form-group input_group">
 									<div class="col-sm-12">
-										Increase Value = <input type="number" id="value2" name="value2" class="form-control" placeholder="Increase value" step="0.01"  />
+										Value to add to balance <input type="number" id="value2" name="value2" class="form-control" placeholder="Increase value" step="0.01"  />
 									</div>
 								</div>
 								<div class="row form-group input_group">	
@@ -48,6 +49,46 @@
 								</div>
 							</form>
 						</div>
+
+
+						<div class="col-sm-6">
+						<p>Calculator to help you with bulk increases</p>
+						<form action="/increaseBal" method="post">
+						<input type="hidden" name="_id" value="<%= user._id %>">
+								<div class="row form-group input_group">
+									<div class="col-sm-12">
+										Increase Value 1 = <input type="number" id="calc1" name="calc1" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
+									</div>
+								</div>
+								<div class="row form-group input_group">
+									<div class="col-sm-12">
+										Increase Value 2 = <input type="number" id="calc2" name="calc2" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
+									</div>
+								</div>
+								<div class="row form-group input_group">
+									<div class="col-sm-12">
+										Increase Value 3 = <input type="number" id="calc3" name="calc3" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
+									</div>
+								</div>
+								<div class="row form-group input_group">
+									<div class="col-sm-12">
+										Increase Value 4 = <input type="number" id="calc4" name="calc4" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
+									</div>
+								</div>
+								<div class="row form-group input_group">	
+									<div class="col-sm-12">
+										<input type="submit" id="calcSumBtn" class="form-control btn btn-primary" name="calcSum" value="Calculate totals" onclick="calcNumbers()"/>
+										<!-- <button type="submit">Submit</button> -->
+									</div>
+								</div>
+								<div class="row form-group input_group">
+									<div class="col-sm-12">
+										Total Calculated = <input type="number" id="calcSum" name="calcSum" class="form-control" value="£" step="0.01" disabled />
+									</div>
+								</div>
+							</form>
+						</div>
+
 					</div>
 				</div>
 			</div>
@@ -62,10 +103,30 @@
 					newBal.value = val1 + val2;
 					return newBal;
 				}
+				function validateForm() {
+				    var fullnameEmpty = document.forms["signUpForm"]["fullname"].value;
 
+
+
+				    if (fullnameEmpty == "") {
+				        alert("Name must be filled out");
+				        return false;
+				    }
+				}
 				function increaseConfirm() {
 				    var val = parseFloat(document.getElementById("value2").value);
 				    alert("Balance increased by: £" + val);
+				}
+
+				function calcNumbers(){
+					var calc1 = parseFloat(document.getElementById("calc1").value);
+					var calc2 = parseFloat(document.getElementById("calc2").value);
+					var calc3 = parseFloat(document.getElementById("calc3").value);
+					var calc4 = parseFloat(document.getElementById("calc4").value);
+					var calcSum = document.getElementById("calcSum");
+
+					calcSum.value = calc1 + calc2 + calc3 + calc4;
+					return calcSum;
 				}
 			</script>
 
