--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,7 +23,7 @@
 		<div class="row">
 		<div class="col-sm-8">
 				<h3>New user?</h3>
-				<form action="signup" method="post">
+				<form name="signUpForm" action="signup" method="post">
 
 					<div class="row form-group input_group">
 						<div class="col-sm-12">
