Calculators upgraded/fixed

--- a/views/increase.ejs
+++ b/views/increase.ejs
@@ -19,11 +19,10 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<h3>Increase balance</h3>
-				
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-6">
-						<p>Add to your balance here</p>
+						<p>Increase your balance here</p>
 						<form action="/increaseBal" method="post">
 						<input type="hidden" name="_id" value="<%= user._id %>">
 								<div class="row form-group input_group">
@@ -60,21 +59,6 @@
 										Increase Value 1 = <input type="number" id="calc1" name="calc1" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
 									</div>
 								</div>
-								<div class="row form-group input_group">
-									<div class="col-sm-12">
-										Increase Value 2 = <input type="number" id="calc2" name="calc2" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
-									</div>
-								</div>
-								<div class="row form-group input_group">
-									<div class="col-sm-12">
-										Increase Value 3 = <input type="number" id="calc3" name="calc3" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
-									</div>
-								</div>
-								<div class="row form-group input_group">
-									<div class="col-sm-12">
-										Increase Value 4 = <input type="number" id="calc4" name="calc4" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
-									</div>
-								</div>
 								<div class="row form-group input_group">	
 									<div class="col-sm-12">
 										<input type="submit" id="calcSumBtn" class="form-control btn btn-primary" name="calcSum" value="Calculate totals" onclick="calcNumbers()"/>
@@ -83,7 +67,7 @@
 								</div>
 								<div class="row form-group input_group">
 									<div class="col-sm-12">
-										Total Calculated = <input type="number" id="calcSum" name="calcSum" class="form-control" value="£" step="0.01" disabled />
+										Total Calculated = <input type="number" id="calcSum" name="calcSum" class="form-control" value="0" step="0.01" disabled />
 									</div>
 								</div>
 							</form>
@@ -120,12 +104,11 @@
 
 				function calcNumbers(){
 					var calc1 = parseFloat(document.getElementById("calc1").value);
-					var calc2 = parseFloat(document.getElementById("calc2").value);
-					var calc3 = parseFloat(document.getElementById("calc3").value);
-					var calc4 = parseFloat(document.getElementById("calc4").value);
 					var calcSum = document.getElementById("calcSum");
+					var tempAns = parseFloat(document.getElementById("calcSum").value);
 
-					calcSum.value = calc1 + calc2 + calc3 + calc4;
+
+					calcSum.value = tempAns + calc1;
 					return calcSum;
 				}
 			</script>
