--- a/views/decrease.ejs
+++ b/views/decrease.ejs
@@ -17,12 +17,12 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-sm-12">
 				<h3>Decrease balance</h3>
-				<p>Please input how much money you would like to take to the budget.</p>
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-12">
+						<div class="col-sm-6">
+						<p>Decrease your balance here</p>
 						<form action="/decreaseBal" method="post">
 						<input type="hidden" name="_id" value="<%= user._id %>">
 								<div class="row form-group input_group">
@@ -47,9 +47,9 @@
 								</div>
 							</form>
 						</div>
-					</div>
-				</div>
-			</div>
+					
+				
+			
 
 
 			<div class="col-sm-6">
@@ -61,7 +61,7 @@
 							Increase Value 1 = <input type="number" id="calc1" name="calc1" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
 						</div>
 					</div>
-					<div class="row form-group input_group">
+					<!-- <div class="row form-group input_group">
 						<div class="col-sm-12">
 							Increase Value 2 = <input type="number" id="calc2" name="calc2" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
 						</div>
@@ -75,7 +75,7 @@
 						<div class="col-sm-12">
 							Increase Value 4 = <input type="number" id="calc4" name="calc4" class="form-control" placeholder="Increase value" value=0 step="0.01"  />
 						</div>
-					</div>
+					</div> -->
 					<div class="row form-group input_group">	
 						<div class="col-sm-12">
 							<input type="submit" id="calcSumBtn" class="form-control btn btn-primary" name="calcSum" value="Calculate totals" onclick="calcNumbers()"/>
@@ -84,11 +84,14 @@
 					</div>
 					<div class="row form-group input_group">
 						<div class="col-sm-12">
-							Total Calculated = £<input type="number" id="calcSum" name="calcSum" class="form-control" value="£" step="0.01" disabled />
+							Total Calculated = £<input type="number" id="calcSum" name="calcSum" class="form-control" value="0" step="0.01" disabled />
 						</div>
 					</div>
 				</form>
 			</div>
+		</div>
+	</div>
+</div>
 
 			<script>
 
@@ -108,27 +111,21 @@
 
 				function calcNumbers(){
 					var calc1 = parseFloat(document.getElementById("calc1").value);
-					var calc2 = parseFloat(document.getElementById("calc2").value);
+/*					var calc2 = parseFloat(document.getElementById("calc2").value);
 					var calc3 = parseFloat(document.getElementById("calc3").value);
-					var calc4 = parseFloat(document.getElementById("calc4").value);
+					var calc4 = parseFloat(document.getElementById("calc4").value);*/
 					var calcSum = document.getElementById("calcSum");
+					var tempAns = parseFloat(document.getElementById("calcSum").value);
 
-					calcSum.value = 0;
-
-					calcSum.value = calcSum.value -calc1;
-					calcSum.value = calcSum.value -calc2;
+					//calcSum.value = calcSum.value -calc1;
+					calcSum.value = tempAns - calc1;
+/*					calcSum.value = calcSum.value -calc2;
 					calcSum.value = calcSum.value -calc3;
-					calcSum.value = calcSum.value -calc4; 
+					calcSum.value = calcSum.value -calc4; */
 
 					return calcSum;
 				}
 			</script>
-
-
-
-		</div>
-	</div>
-</div>
 
 
 
