--- a/views/increase.ejs
+++ b/views/increase.ejs
@@ -62,12 +62,16 @@
 								<div class="row form-group input_group">	
 									<div class="col-sm-12">
 										<input type="submit" id="calcSumBtn" class="form-control btn btn-primary" name="calcSum" value="Calculate totals" onclick="calcNumbers()"/>
-										<!-- <button type="submit">Submit</button> -->
 									</div>
 								</div>
 								<div class="row form-group input_group">
 									<div class="col-sm-12">
 										Total Calculated = <input type="number" id="calcSum" name="calcSum" class="form-control" value="0" step="0.01" disabled />
+									</div>
+								</div>
+								<div class="row form-group input_group">
+									<div class="col-sm-12">
+									<input type="reset" class="form-control btn btn-primary">
 									</div>
 								</div>
 							</form>
@@ -96,10 +100,6 @@
 				        alert("Name must be filled out");
 				        return false;
 				    }
-				}
-				function increaseConfirm() {
-				    var val = parseFloat(document.getElementById("value2").value);
-				    alert("Balance increased by: £" + val);
 				}
 
 				function calcNumbers(){
