--- a/views/decrease.ejs
+++ b/views/decrease.ejs
@@ -35,6 +35,11 @@
 										Decrease Value = <input type="number" id="value2" name="value2" class="form-control" placeholder="Decrease value" step="0.01"  />
 									</div>
 								</div>
+								<div class="row form-group input_group">
+									<div class="col-sm-12">
+										Description of decrease <input type="string" id="decDesc" name="decDesc" class="form-control" placeholder="Decrease Description" />
+									</div>
+								</div>
 								<div class="row form-group input_group">	
 									<div class="col-sm-12">
 										<input type="submit" id="decrease" class="form-control btn btn-primary" name="decrease" value="Remove from balance" onclick="addNumbers(), decreaseConfirm()"/>
