--- a/views/history.ejs
+++ b/views/history.ejs
@@ -16,7 +16,7 @@
 	</div>
 
 	<div class="container text-center">
-	<p>Balance changes by date, in chronological order, with the earliest amendment first.</p>
+	<p>Balance changes by date, in chronological order, with the earliest amendment first. To view a report of income/outcome spending please click <a href="/inoutcome">here</a></p>
 		<div class="row">
 			<div class="col-sm-12">
 
