--- a/views/increase.ejs
+++ b/views/increase.ejs
@@ -35,6 +35,11 @@
 										Value to add to balance <input type="number" id="value2" name="value2" class="form-control" placeholder="Increase value" step="0.01"  />
 									</div>
 								</div>
+								<div class="row form-group input_group">
+									<div class="col-sm-12">
+										Description of increase <input type="string" id="incDesc" name="incDesc" class="form-control" placeholder="Increase Description" />
+									</div>
+								</div>
 								<div class="row form-group input_group">	
 									<div class="col-sm-12">
 										<input type="submit" id="increase" class="form-control btn btn-primary" name="increase" value="Add to balance" onclick="addNumbers(), increaseConfirm()"/>
