--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -33,9 +33,10 @@
 
 	<div class="container text-center">
 
-	<p>Your current target is: <%= user.target%></p>
+	<p>Your current target is: £<%= user.target%><br>
+	<a href="/edit">Click here to change</a></p>
 	<p><a href="/history">View your balance history</a></p>
-	<p><a href="/edit">Click here to change</a></p>
+
 
 	</div>
 
