some more validation completed

--- a/views/decrease.ejs
+++ b/views/decrease.ejs
@@ -32,7 +32,7 @@
 								</div>
 								<div class="row form-group input_group">
 									<div class="col-sm-12">
-										Decrease Value = <input type="number" id="value2" name="value2" class="form-control" placeholder="Decrease value" step="0.01"  />
+										Decrease Value = <input type="number" id="value2" name="value2" class="form-control" placeholder="Decrease value" step="0.01"  required="true" />
 									</div>
 								</div>
 								<div class="row form-group input_group">
