--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,7 +21,7 @@
 			</div>
 			<div class="col-sm-8" >
 				<h3 style="font-size: 5vw;" data-toggle="tooltip" title="This is your current balance.">Your balance is</h3>
-				<h3 style="font-size: 12vw;" data-toggle="tooltip" title="This is your current balance.">£<%= user.balance%></h3>
+				<h3 style="font-size: 12vw;" data-toggle="tooltip" title="This is your current balance." pattern="(\d{3})([\.])(\d{2})">£<%= user.balance%></h3>
 
 			</div>
 			<div class="col-sm-2"><br><br><br><br>	
